--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1,25 +1,11 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "Dagger.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
       "source": [
         "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/duckietown/challenge-aido_LF-baseline-dagger-pytorch/blob/main/notebook.ipynb)"
-      ],
-      "cell_type": "markdown",
-      "metadata": {}
+      ]
     },
     {
       "cell_type": "markdown",
@@ -32,44 +18,44 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "y7B4akyzOBJQ"
       },
+      "outputs": [],
       "source": [
         "branch = \"daffy\" #@param ['master', 'daffy']"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "88TrRDRLOXLF",
-        "outputId": "64bc658f-676e-4c42-f168-9aa01d26dd74",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "88TrRDRLOXLF",
+        "outputId": "64bc658f-676e-4c42-f168-9aa01d26dd74"
       },
+      "outputs": [],
       "source": [
         "! git clone --branch {branch} https://github.com/duckietown/gym-duckietown"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "IdLCXQT1Oy9U",
-        "outputId": "26d707af-8bc6-4435-f2c8-acb29f281236",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "IdLCXQT1Oy9U",
+        "outputId": "26d707af-8bc6-4435-f2c8-acb29f281236"
       },
+      "outputs": [],
       "source": [
         "!pip install -e gym-duckietown/."
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
@@ -101,42 +87,44 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "Gd7rzmy5OlyJ",
-        "outputId": "32eb5436-b959-428c-860b-ba34b7954c37",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Gd7rzmy5OlyJ",
+        "outputId": "32eb5436-b959-428c-860b-ba34b7954c37"
       },
+      "outputs": [],
       "source": [
         "!apt-get install python-opengl -y\n",
         "!apt install xvfb -y\n",
         "!apt-get install x11-utils"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "_vOFpsrQOpv7",
-        "outputId": "e53357c3-896e-4cbd-c29d-975b38d211e3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "_vOFpsrQOpv7",
+        "outputId": "e53357c3-896e-4cbd-c29d-975b38d211e3"
       },
+      "outputs": [],
       "source": [
         "!pip install pyvirtualdisplay\n",
         "!pip install piglet"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "T2Ajwp-HPDKY"
       },
+      "outputs": [],
       "source": [
         "from pyvirtualdisplay import Display\n",
         "import numpy as np\n",
@@ -152,9 +140,7 @@
         "    if type(os.environ.get(\"DISPLAY\")) is not str or len(os.environ.get(\"DISPLAY\"))==0:\n",
         "        !bash ../xvfb start\n",
         "        %env DISPLAY=:1"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -176,25 +162,27 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "xyHbCPyURVG3"
       },
+      "outputs": [],
       "source": [
         "learning_rates = ['1e-1', '1e-2', '1e-3', '1e-4', '1e-5']\n",
         "mixing_decays = ['0.5', '0.6', '0.7', '0.8', '0.85', '0.9', '0.95']"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "augg6SvSQOR_"
       },
+      "outputs": [],
       "source": [
         "save_path = \"imitation_baseline\" #@param {type: \"string\"}\n",
-        "episode = 10 # @param {type: \"integer\"}\n",
-        "horizon = 128 # @param {type: \"integer\"}\n",
+        "episode = 20 # @param {type: \"integer\"}\n",
+        "horizon = 500 # @param {type: \"integer\"}\n",
         "learning_rate = \"1e-3\" # @param ['1e-1', '1e-2', '1e-3', '1e-4', '1e-5']\n",
         "decay = \"0.7\" # @param ['0.5', '0.6', '0.7', '0.8', '0.85', '0.9', '0.95']\n",
         "map_name = \"loop_empty\" #@param {type: \"string\"}\n",
@@ -203,32 +191,30 @@
         "num_outputs = 2 # @param {type: \"integer\"} \n",
         "learning_rate = learning_rates.index(learning_rate)\n",
         "decay = mixing_decays.index(decay)\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "DmXN_kBVO9xX",
-        "outputId": "05ae09c7-fe9c-4697-8a2a-8413989c12f9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "DmXN_kBVO9xX",
+        "outputId": "05ae09c7-fe9c-4697-8a2a-8413989c12f9"
       },
+      "outputs": [],
       "source": [
         "create_display()\n",
         "!python -m learning.train --save-path {save_path} --episode {episode} --horizon {horizon} --learning-rate {learning_rate} --decay {decay} --map-name {map_name} --num-outputs {num_outputs}"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
       "source": [
         "### View on Tensorboard"
-      ],
-      "cell_type": "markdown",
-      "metadata": {}
+      ]
     },
     {
       "cell_type": "code",
@@ -251,28 +237,42 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "ewy5rVJxmGk-"
       },
+      "outputs": [],
       "source": [
         "map_name = \"loop_empty\" #@param {type: \"string\"}\n",
         "episode = 10 # @param {type: \"integer\"}\n",
         "horizon = 128 # @param {type: \"integer\"}"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "DWYXt0mQP_CW"
       },
+      "outputs": [],
       "source": [
         "create_display()\n",
         "!python -m learning.test --model-path {os.path.join(save_path, \"model.pt\")} --num-outputs {num_outputs} --map-name {map_name} --episode {episode} --horizon {horizon}"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "collapsed_sections": [],
+      "name": "Dagger.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
